# next_project

./: .dockerignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: urls.py  views.py
backend/config/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: config.json
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page_client-reference-manifest.js
frontend/.next/server/chunks/: [root-of-the-server]__f547b805._.js.map  node_modules_next_635ab235._.js.map
frontend/.next/server/chunks/ssr/: [root-of-the-server]__38b19390._.js  [root-of-the-server]__38b19390._.js.map  [root-of-the-server]__a8ab9a0d._.js.map  [root-of-the-server]__a9fea3fa._.js.map  (+12 more)
frontend/.next/static/chunks/: [root-of-the-server]__0f0ba101._.css  [root-of-the-server]__0f0ba101._.css.map  node_modules_391d5f8c._.js.map  node_modules_@swc_helpers_cjs_b3dc30d6._.js.map  node_modules_next_dist_8db7fb1f._.js.map  node_modules_next_dist_b0daae9a._.js.map  node_modules_next_dist_client_cf1d9188._.js.map  node_modules_next_dist_compiled_5150ccfd._.js.map  node_modules_next_dist_compiled_next-devtools_index_a9cb0712.js  node_modules_next_dist_compiled_next-devtools_index_a9cb0712.js.map  node_modules_next_dist_compiled_react-dom_1e674e59._.js.map  node_modules_next_dist_f13e31ba._.js.map  src_app_layout_tsx_0a548d63._.js
